[gd_scene load_steps=9 format=3 uid="uid://cy2exo5uyu0im"]

[ext_resource type="Script" uid="uid://cido4vhi2pbo3" path="res://scripts/menu.gd" id="1_0xf3w"]
[ext_resource type="FontFile" uid="uid://c1kqkebl4qmwc" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_a1b1w"]
[ext_resource type="Texture2D" uid="uid://d7woe36og0cf" path="res://assets/background Images/background.webp" id="2_s7k0v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3xh8"]
texture = ExtResource("2_s7k0v")
region_rect = Rect2(0, 309, 1022, 603)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l2wse"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yniqi"]
bg_color = Color(0.345098, 0.364706, 0.490196, 0.988235)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oid2b"]
bg_color = Color(1.44392e-06, 0.77019, 0.700797, 0.988235)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o8oa"]
bg_color = Color(0, 0.364706, 0.329412, 0.988235)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xf3w")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_j3xh8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -307.0
offset_right = 556.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0804355
anchor_top = 0.104518
anchor_right = 0.510992
anchor_bottom = 0.203284
offset_left = -55.4443
offset_top = 5.82584
offset_right = 149.778
offset_bottom = 17.5789
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_a1b1w")
theme_override_font_sizes/font_size = 64
text = "Bobbingo"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.0
offset_top = -89.0
offset_right = -280.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_a1b1w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l2wse")
theme_override_styles/hover = SubResource("StyleBoxFlat_yniqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oid2b")
theme_override_styles/normal = SubResource("StyleBoxFlat_4o8oa")
text = "START"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.290338
anchor_top = 0.83566
anchor_right = 0.290338
anchor_bottom = 0.979794
offset_left = -67.8553
offset_top = -54.0949
offset_right = 137.367
offset_bottom = -42.3419
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = ":("
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = 13.0
offset_right = -305.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_a1b1w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l2wse")
theme_override_styles/hover = SubResource("StyleBoxFlat_yniqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oid2b")
theme_override_styles/normal = SubResource("StyleBoxFlat_4o8oa")
text = "MAPS"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -482.0
offset_top = 110.0
offset_right = -311.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.16251
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_a1b1w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l2wse")
theme_override_styles/hover = SubResource("StyleBoxFlat_yniqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oid2b")
theme_override_styles/normal = SubResource("StyleBoxFlat_4o8oa")
text = "EXIT"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed_start"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed_maps"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
